7.5.4. FIX refactor tests